<resources>
    <string name="app_id_admob">ca-app-pub-2143713369225060~2979335959</string>
    <string name="inter_id_admob">ca-app-pub-2143713369225060/4264497469</string>
    <string name="banner_id_admob">ca-app-pub-2143713369225060/7961690584</string>
    <string name="app_name">Mata Elang</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mata_elang">Mata Elang</string>
    <string name="deskripsi_mata_elang">Mari Pantau Stunting dengan Elektronik Antropometri Gizi</string>
    <string name="tambah_admin_user_ibu">Tambah Admin</string>
    <string name="input_data_antropometri">Input Data Antropometri</string>
    <string name="lihat_data_antropometeri">Lihat Data Antropometeri</string>
    <string name="managemen_akun">Managemen Akun</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="dashboard">Dashboard</string>
    <string name="loading">Loading...</string>
    <string name="bayi_terdaftar">Terdaftar</string>
    <string name="ibu_terdaftar">Terdaftar</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mata_elang_splash">\"MATA ELANG\"</string>
    <string name="mari_pantau_stunting_elektronik_antropometri_gizi">Mari Pantau Stunting Elektronik Antropometri Gizi</string>
    <string name="cek_koneksi_internet">Tidak ada koneksi internet !\nSilahkan periksa kembali koneksi internet anda !</string>
    <string name="title_activity_tambah_admin_user_ibu">TambahAdminUserIbuActivity</string>
    <string name="pilih_tipe_akun">Pilih Tipe Akun</string>
    <string name="admin">Admin</string>
    <string name="user_ibu">User Ibu</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="nomer_hp">Nomer Hp</string>
    <string name="email">Email (harus email aktif)</string>
    <string name="password">Password</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="daftar">Daftar</string>
    <string name="login_mata_elang">LOGIN MATA ELANG</string>
    <string name="login">LOGIN</string>
    <string name="reset">Reset Default</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="standar_antropometeri">Standar Antropometeri</string>
    <string name="posyandu">Posyandu</string>
    <string name="standar_antropometri">Standar Antropomteri</string>
    <string name="pb_normal_cm">PB Normal (cm)</string>
    <string name="anak_umur_0_bulan">Anak Umur 0 Bulan</string>
    <string name="anak_umur_1_bulan">Anak Umur 1 Bulan</string>
    <string name="anak_umur_2_bulan">Anak Umur 2 Bulan</string>
    <string name="anak_umur_3_bulan">Anak Umur 3 Bulan</string>
    <string name="anak_umur_4_bulan">Anak Umur 4 Bulan</string>
    <string name="anak_umur_5_bulan">Anak Umur 5 Bulan</string>
    <string name="anak_umur_6_bulan">Anak Umur 6 Bulan</string>
    <string name="anak_umur_7_bulan">Anak Umur 7 Bulan</string>
    <string name="anak_umur_8_bulan">Anak Umur 8 Bulan</string>
    <string name="anak_umur_9_bulan">Anak Umur 9 Bulan</string>
    <string name="anak_umur_10_bulan">Anak Umur 10 Bulan</string>
    <string name="anak_umur_11_bulan">Anak Umur 11 Bulan</string>
    <string name="anak_umur_12_bulan">Anak Umur 12 Bulan</string>
    <string name="anak_umur_13_bulan">Anak Umur 13 Bulan</string>
    <string name="anak_umur_14_bulan">Anak Umur 14 Bulan</string>
    <string name="anak_umur_15_bulan">Anak Umur 15 Bulan</string>
    <string name="anak_umur_16_bulan">Anak Umur 16 Bulan</string>
    <string name="anak_umur_17_bulan">Anak Umur 17 Bulan</string>
    <string name="anak_umur_18_bulan">Anak Umur 18 Bulan</string>
    <string name="anak_umur_19_bulan">Anak Umur 19 Bulan</string>
    <string name="anak_umur_20_bulan">Anak Umur 20 Bulan</string>
    <string name="anak_umur_21_bulan">Anak Umur 21 Bulan</string>
    <string name="anak_umur_22_bulan">Anak Umur 22 Bulan</string>
    <string name="anak_umur_23_bulan">Anak Umur 23 Bulan</string>
    <string name="anak_umur_24_bulan">Anak Umur 24 Bulan</string>
    <string name="simpan">SIMPAN</string>
    <string name="semua_data_tentang_posyandu">Semua data tentang posyandu</string>
    <string name="nama_posyandu">Nama Posyandu</string>
    <string name="alamat_lengkap_posyandu">Alamat Lengkap Posyandu</string>
    <string name="alamat_posyandu">Alamat Posyandu</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="nomer_hp_kantor">Nomer HP Kantor</string>
    <string name="edit">Edit</string>
    <string name="username_password_kosong">username atau password masih Kosong!</string>
    <string name="jenis_akun_admin">Jenis Akun : Admin</string>
    <string name="tipe_admin">Jenis Akun : Admin</string>
    <string name="tipe_user_ibu">Jenis Akun : User Ibu</string>
    <string name="masih_kosong">Masih Ada Data Yang Kosong !</string>
    <string name="pass_salah">Konfirmasi Password Salah !</string>
    <string name="databae_url">https://mata-elang-project.firebaseio.com/</string>
    <string name="web_api">AIzaSyDkzUYJXIwo5pPnAxQ1i626gqa24e71P3Y</string>
    <string name="project_idku">com.firdausy.rafly.mataelang</string>
    <string name="berhasil_membuat_akun">Berhasil Membuat akun  </string>
    <string name="data_berhasil_di_simpan">Data Berhasil Di Simpan !</string>
    <string name="batal">Batal</string>
    <string name="orang">Orang</string>
    <string name="daftar_nama_ibu">Daftar Nama Ibu</string>
    <string name="silahkan_klik_salah_satu_nama_ibu_di_bawah_ini_untuk_mengisi_data_antropometri">Silahkan pilih salah satu nama ibu di bawah ini untuk mengisi data antropometri</string>
    <string name="search">Search</string>
    <string name="tidak_ditemukan">Data Tidak Di Temukan !</string>
    <string name="nama_ibu">Nama Ibu</string>
    <string name="email_ibu">Email Ibu</string>
    <string name="silahkan_pilih_salah_satu_nama_ibu_di_bawah_ini_untuk_melihat_detail_data_dan_grafik_antropometri">Silahkan pilih salah satu nama ibu di bawah ini untuk melihat detail data dan grafik antropometri</string>
    <string name="pilih_anak">Silahkan pilih salah satu nama anak yang terdaftar di bawah ini untuk mengisi data antropometri pada anak tersebut.</string>
    <string name="tambah_data_anak">Tambah Data Anak</string>
    <string name="isi_data">Silahkan isi data bayi di bawah ini sesuai dengan kondisi bayi</string>
    <string name="nama_lengkap_bayi">Nama Lengkap Bayi</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="input_data_anak">Input Data Anak</string>
    <string name="berhasil_menambah_data_bayi">Berhasil Menambah Data Bayi !</string>
    <string name="belum_ada_data_anak">Belum Ada Data Anak</string>
    <string name="pilih_data_bayi">Pilih Nama Anak</string>
    <string name="panjang_badan">Panjang\nBadan</string>
    <string name="cm">(Cm)</string>
    <string name="berat_badan">Berat\nBadan</string>
    <string name="tanggal_input">Tanggal Input</string>
    <string name="panggil">Panggil</string>
    <string name="granted">Permission Granted !</string>
    <string name="denied">Permission Denied !</string>
    <string name="umur_n_bulan">Umur\n(Bulan)</string>
    <string name="bulan">(Bulan)</string>
    <string name="beresiko_stunting">Anak Anda Berisiko Stunting !</string>
    <string name="anak_normal">Anak Anda Normal !</string>
    <string name="silahkan_pilih_nama_anak_di_bawah_ini_untuk_melihat_data_anak_tersebut">Silahkan pilih nama anak di bawah ini untuk melihat data anak tersebut</string>
    <string name="format_tanggal">dd/MM/yyyy</string>
    <string name="detail_data">Detail Data Antropometri Anak</string>
    <string name="lihat_data">Lihat Data</string>
    <string name="deskripsi_mata_elang_tentang">Mata Elang adalah aplikasi berbasis android sebagai inovasi dari pencatatan antropometri gizi pada anak usia 0-24 bulan berbasis kertas pada buku Kesehatan Ibu dan Anak (KIA).\n\nAplikasi Mata Elang merupakan aplikasi  berbasis android merupakan aplikasi pemantauan antropometri status gizi pada anak usia 0-24 bulan untuk deteksi dini adanya stunting pada balita yang bersifat realtime.</string>
    <string name="asset">Asset yang digunakan pada aplikasi ini didapat dari www.flaticon.com</string>
    <string name="tentang_pengembang">Tentang Pengembang</string>
    <string name="vivin_listya_putri">Vivin Listya Putri</string>
    <string name="founder">Founder Mata Elang</string>
    <string name="co_founder_1">Co-Founder 1</string>
    <string name="co_founder_2">Co-Founder 2</string>
    <string name="sapaya_kelalen">Sapaya Kelalen</string>
    <string name="rafli_firdausy">Rafli Firdausy</string>
    <string name="data_posyandu">Data Posyandu</string>
    <string name="logout">Logout</string>
    <string name="data_anak">Data Anak</string>
    <string name="silahkan_edit_data_di_bawah_ini_sesuai_dengan_data_diri_anda">Silahkan Edit Data di bawah ini sesuai dengan Data diri anda.</string>
    <string name="data_diri">Data Diri</string>
    <string name="email_tidak_bisa_diubah">Email (Tidak bisa diubah)</string>
    <string name="batall">Batal</string>
    <string name="password_saat_ini">Password saat ini</string>
    <string name="password_baru">Password baru</string>
    <string name="ulangi_password_baru">Ulangi password baru</string>
    <string name="pass_lama_salah">Password lama yang anda inputkan salah !</string>
    <string name="pass_berhasil_update">Password Berhasil Di Update !</string>
    <string name="pass_lama_salahh">Password Lama yang anda masukan salah !</string>
    <string name="hubungi_kantor_posyandu">Hubungi Kantor Posyandu</string>
    <string name="data_tidak_ditemukann">Data tidak Ditemukan !</string>
    <string name="cara_pencegahan">Cara Pencegahan Stunting</string>
    <string name="tindakan_untuk_anak">Tindakan Untuk Anak</string>
    <string name="pencegahan_stunting">Pencegahan Stunting</string>
    <string name="beberapa_cara_yang_dapat_dilakukan_oleh_ibu_untuk_mencegah_stunting">Beberapa cara yang dapat dilakukan oleh ibu untuk mencegah stunting.</string>
    <string name="cara_pencegahan_stunting">Cara Pencegahan Stunting</string>
    <string name="beberapa_cara_yang_dapat_dilakukan_jika_anak_keadaan_normal">Beberapa cara yang dapat dilakukan jika anak keadaan normal.</string>
    <string name="beberapa_cara_yang_dapat_dilakukan_jika_anak_keadaan_stunting">Beberapa cara yang dapat dilakukan jika anak keadaan stunting.</string>
    <string name="tindakan_normal">Tindakan Normal</string>
    <string name="tindakan_yang_harus_dilakukan_jika_anak_normal">Tindakan yang harus dilakukan jika anak normal</string>
    <string name="tindakan_yang_harus_dilakukan_jika_anak_stunting">Tindakan yang harus dilakukan jika anak beresiko stunting</string>
    <string name="normal">Normal</string>
    <string name="stunting">Stunting</string>
    <string name="selamat_datang_di_mata_elang">Selamat datang di MATA ELANG!</string>
    <string name="masuk">Masuk</string>
    <string name="mata_elang_uppercaser">MATA ELANG</string>
</resources>