<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_tambahUser"
            android:icon="@drawable/add"
            android:title="@string/tambah_admin_user_ibu" />
        <item
            android:id="@+id/action_input"
            android:icon="@drawable/input"
            android:title="@string/input_data_antropometri" />
        <item
            android:id="@+id/action_lihat"
            android:icon="@drawable/lihat"
            android:title="@string/lihat_data_antropomteri" />
        <item
            android:id="@+id/action_pengaturan"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/pengaturan" />
    </group>

    <item android:title="@string/managemen_akun">
        <menu>
            <item
                android:id="@+id/action_edit"
                android:icon="@drawable/profile"
                android:title="@string/edit_profile" />
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/logout"
                android:title="Logout" />
        </menu>
    </item>

</menu>
