<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ibu.EditDataDiriFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="20dp"
            app:srcCompat="@drawable/profile"
            android:tint="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/data_diri"
                    android:textColor="@color/colorPrimary"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:paddingTop="5dp"
                    android:text="@string/silahkan_edit_data_di_bawah_ini_sesuai_dengan_data_diri_anda"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_tidak_bisa_diubah"
            android:textColor="@color/black"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:enabled="false"
            android:focusable="false"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:textColor="@color/black"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/et_namaLengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomer_hp"
            android:textColor="@color/black"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/et_nomerHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomer_hp"
            android:inputType="phone"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat_lengkap"
            android:textColor="@color/black"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/et_alamatLengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat_lengkap"
            android:inputType="textPostalAddress"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/tombol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50">
                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:fontFamily="monospace"
                    android:text="@string/edit"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:targetApi="lollipop" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50">
                <Button
                    android:id="@+id/btn_simpan"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white"
                    android:fontFamily="monospace"
                    android:text="@string/simpan"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:targetApi="lollipop" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>