<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/side_nav_bar"
    android:fitsSystemWindows="true"
    tools:context=".Activity.WelcomeScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/mata_elang_uppercaser"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <ImageView
        android:id="@+id/iv_help"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_help_outline_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="start"
            android:src="@drawable/mataelang" />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/selamat_datang_di_mata_elang"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="monospace"
            android:paddingTop="10dp"
            android:text="@string/deskripsi_mata_elang"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_masuk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/masuk"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    tools:targetApi="lollipop" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_daftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/daftar"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    tools:targetApi="lollipop" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>